crates/analyzer/tests/snapshots/errors__ctx_builtins_param_incorrect_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `Barn` expects 1 argument, but 2 were provided
  ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:7:35
  │
7 │         let existing_barn: Barn = Barn("hello world", address(0))
  │                                   ^^^^ -------------  ---------- supplied 2 arguments
  │                                   │                    
  │                                   expects 1 argument

error: type mismatch
  ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:7:40
  │
7 │         let existing_barn: Barn = Barn("hello world", address(0))
  │                                        ^^^^^^^^^^^^^ this has type `String<11>`; expected type `address`

error: No function `create` exists on type `Barn`
  ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:8:39
  │
8 │         let created_barn: Barn = Barn.create(address(26), 0)
  │                                       ^^^^^^ undefined function


